@@ -22,6 +22,7 @@ h3. 0.6.1 unreleased
 * add 'Business Casual' theme from startbootstrap.com
 * add 'Shop Homepage' theme from startbootstrap.com
 * add 'Shop Item' theme from startbootstrap.com
+* add 'Landing Page' theme from startbootstrap.com
 
 h3. 0.6.0 May 10, 2015
 
